--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 *.log
-
 *.pot
-
 *.pyc
 
 */*/*/__pycache__/
-
 */*/__pycache__/
-
 */__pycache__/
+
+.coverage
+.coveragerc
+/coverage.data
+/coverage/
+/htmlcov/
+.pytest_cache/
