--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ psycopg2>=2.7,<2.8 --no-binary psycopg2
 pytest~=3.7.2
 pytest-cov~=2.5.1
 pytest-django~=3.4.1
+pytest-lazy-fixture~=0.4.1
+unittest2~=1.1.0
+urllib3~=1.23
